[gd_scene load_steps=8 format=3 uid="uid://b061t0r5qdbh6"]

[ext_resource type="Script" uid="uid://dymscuems4irn" path="res://globals/debug_ui.gd" id="1_7ny8s"]
[ext_resource type="Script" uid="uid://d6gh3spmgbp0" path="res://addons/controller_icons/objects/ControllerIconTexture.gd" id="2_2j3hm"]
[ext_resource type="Script" uid="uid://cp0gcaquk0nu7" path="res://components/setup_resources.gd" id="2_sxc7k"]
[ext_resource type="Script" uid="uid://bdour1f6ee8mm" path="res://components/unlock_structures.gd" id="3_obpqu"]

[sub_resource type="Texture2D" id="Texture2D_tb76i"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_2j3hm")
path = "Skip"
show_mode = 0
force_type = 0
metadata/_custom_type_script = "uid://d6gh3spmgbp0"

[sub_resource type="Texture2D" id="Texture2D_ekx6d"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_2j3hm")
path = "ToggleUi"
show_mode = 0
force_type = 0
metadata/_custom_type_script = "uid://d6gh3spmgbp0"

[sub_resource type="Texture2D" id="Texture2D_re1eu"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("2_2j3hm")
path = "Debug"
show_mode = 0
force_type = 0
metadata/_custom_type_script = "uid://d6gh3spmgbp0"

[node name="DebugUi" type="CanvasLayer"]
layer = 6
script = ExtResource("1_7ny8s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerSpeedLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Player Speed"

[node name="PlayerSpeedLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GiveResourcesButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Give Resources"

[node name="UnlockStructuresButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Unlock Structures"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = SubResource("Texture2D_tb76i")
expand_mode = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "skip dialogue"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = SubResource("Texture2D_ekx6d")
expand_mode = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "show/hide the UI"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = SubResource("Texture2D_re1eu")
expand_mode = 1

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "show/hide debug UI"

[node name="UpdateResourcesComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_sxc7k")
resources = Dictionary[String, int]({
"Electricity": 100,
"Food": 100,
"Happiness": 100,
"Materials": 100,
"Seeds": 100,
"Soil": 100,
"Waste": 100,
"Water": 100
})
resource_storage_limits = Dictionary[String, int]({
"Electricity": 100,
"Water": 100
})
metadata/_custom_type_script = "uid://cp0gcaquk0nu7"

[node name="UnlockStructuresComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_obpqu")
metadata/_custom_type_script = "uid://bdour1f6ee8mm"
